--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "johnny-five": "0.11.7",
     "lodash": "4.17.4",
+    "random-int": "1.0.0",
     "rgb-hex": "2.1.0",
     "temporal": "0.6.0"
   }
